# libgpiod

./: .gitignore  Makefile.am  configure.ac
bindings/glib/: Makefile.am  chip.c  gpiod-glib.h  internal.h  line.c  misc.c
bindings/glib/examples/: Makefile.am  gpiodetect-glib.c  gpioinfo-glib.c
dbus/: Makefile.am  chip.c  daemon.c  gpio-dbus.c  gpio-dbus.h  line.c
dbus/data/: Makefile.am  org.gpiod.conf  org.gpiod.xml
dbus/examples/: Makefile.am  gpiodetect-dbus.py
